@@ -168,7 +168,7 @@ public class MetadataTests extends ESTestCase {
 
         List<Index> allIndices = new ArrayList<>(result.indices);
         allIndices.addAll(result.backingIndices);
-        String[] concreteIndices = allIndices.stream().map(Index::getName).collect(Collectors.toList()).toArray(new String[] {});
+        String[] concreteIndices = allIndices.stream().map(Index::getName).toList().toArray(new String[] {});
         ImmutableOpenMap<String, IndexAbstraction.DataStream> dataStreams = result.metadata.findDataStreams(concreteIndices);
         assertThat(dataStreams.size(), equalTo(numBackingIndices));
         for (Index backingIndex : result.backingIndices) {
@@ -1464,10 +1464,7 @@ public class MetadataTests extends ESTestCase {
             // always include at least one backing index per data stream
             DataStream ds = postSnapshotMetadata.dataStreams().get(dsName);
             indicesInSnapshot.addAll(
-                randomSubsetOf(
-                    randomIntBetween(1, ds.getIndices().size()),
-                    ds.getIndices().stream().map(Index::getName).collect(Collectors.toList())
-                )
+                randomSubsetOf(randomIntBetween(1, ds.getIndices().size()), ds.getIndices().stream().map(Index::getName).toList())
             );
         }
         var reconciledMetadata = Metadata.snapshot(postSnapshotMetadata, dataStreamsToSnapshot, indicesInSnapshot);
@@ -1485,10 +1482,7 @@ public class MetadataTests extends ESTestCase {
             // always include at least one backing index per data stream
             DataStream ds = postSnapshotMetadata.dataStreams().get(dsName);
             indicesInSnapshot.addAll(
-                randomSubsetOf(
-                    randomIntBetween(1, ds.getIndices().size()),
-                    ds.getIndices().stream().map(Index::getName).collect(Collectors.toList())
-                )
+                randomSubsetOf(randomIntBetween(1, ds.getIndices().size()), ds.getIndices().stream().map(Index::getName).toList())
             );
         }
         String missingDataStream = randomAlphaOfLength(5).toLowerCase(Locale.ROOT);
